fixing front page ui on mobile

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 .center-box {
     display: flex;
     flex-direction: column;
+    justify-content: center;
   box-shadow: 0 10px 30px rgba(0,0,0,0.2);
   text-align: center;
     margin-left: 10%;
